Fixed footer alignment

--- a/comments/public/stylesheets/style.css
+++ b/comments/public/stylesheets/style.css
@@ -32,5 +32,6 @@ table {
   position: fixed;
   text-align: center;
   bottom: 0;
+  left: 0;
   width: 100%;
 }
